layout of the module

--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -11,7 +11,7 @@
        <div class="container top">
           <div class="content">
             {% block content %}
-            {% end bock %}
+            {% endblock %}
           </div>
         </div>
     </body>
