--- a/jobs/templates/index.html
+++ b/jobs/templates/index.html
@@ -1,2 +1,11 @@
 {% extends "layout.html" %}
-<h1>Jobs</h1>
+{% block content}
+   <div class="column">
+     <div class="column">
+        <h1>jobs</h1>
+     </div>
+     <div class="column is-one-fifth">
+     </div>
+   </div>
+   {{ show_jobs(job) }}
+{% endblock %}
