--- a/jobs/templates/index.html
+++ b/jobs/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block content}
+{% block content %}
    <div class="column">
      <div class="column">
         <h1>jobs</h1>
