--- a/jobs/templates/employer.html
+++ b/jobs/templates/employer.html
@@ -13,16 +13,16 @@
     <div class="box">
        <article class="media">
           <div class="media-left">
-            {% for _ in range(0,review['rating']) %}
+            {% for _ in range(0,review['rating']): %}
             <span class="fa fa-start checked"></span>
             {% endfor %}
           </div>
           <div class="media-content">
             <div class="content">
               <p>
-                <strong></strong>
-                <small></small>
-                <small></small>
+                <strong>{{ review['title'] }}</strong>
+                <small>{{ review['status'] }}</small>
+                <small>{{ review['date'] }}</small>
                 {{ review['review'] }}
               </p>
             </div>
