--- a/jobs/templates/employer.html
+++ b/jobs/templates/employer.html
@@ -13,7 +13,7 @@
     <div class="box">
        <article class="media">
           <div class="media-left">
-            {% for _ in range(0,review['rating']): %}
+            {% for _ in range(0,review['rating']) %}
             <span class="fa fa-start checked"></span>
             {% endfor %}
           </div>
